# Network-applications

./: CMakeLists.txt  main.cpp
Headers/: CMakeLists.txt  net_message.h
NetClient/: CMakeLists.txt  SimpleClient.cpp
NetCommon/: CMakeLists.txt  run
NetCommon/Headers/: CMakeLists.txt  net_client.h  net_connection.h  net_server.h  net_tsqueue.h  olc_net.h
NetServer/: SimpleServer.cpp
Network-Programming-Cookbook/: AcceptingConnection.cpp  BindingSocketEP.cpp  BindingUDPSocket.cpp  CMakeLists.txt  ConnectToSocket.cpp  PreparingBufferInp.cpp  PreparingBufferOut.cpp  ReadFromSocket.cpp  ResolvingDNS-TCP.cpp  StreamBuffer.cpp  active_socketTCP.cpp  active_socketUDP.cpp  client_ep-1.cpp  run  write_socket.cpp
Network-Programming-Cookbook/Last_examples/: CreatePassiveSocket.cpp  server_ep-1.cpp
OLC-networking/NetClient/: CMakeLists.txt  SimpleClient.cpp  run
OLC-networking/NetCommon/: main.cpp  run
OLC-networking/NetCommon/Headers/: net_client.h  net_common.h  net_message.h  net_server.h  net_tsqueue.h
OLC-networking/NetServer/: CMakeLists.txt  a.out
